--- a/Sobrenosotros.html
+++ b/Sobrenosotros.html
@@ -27,25 +27,25 @@
         </div>
         <div class="col">
           <a
-            href="/ventas.html"
+            href="ventas.html"
             target="_blank"
             class="btn btn-dark text-white-50"
             >Venta 0km</a
           >
           <a
-            href="/ventas.html"
+            href="ventas.html"
             target="_blank"
             class="btn btn-dark text-white-50"
             >Venta Usados</a
           >
           <a
-            href="/Sobrenosotros.html"
+            href="Sobrenosotros.html"
             target="_blank"
             class="btn btn-dark text-white-50"
             >Sobre Nosotros</a
           >
           <a
-            href="/Sobrenosotros.html"
+            href="Sobrenosotros.html"
             target="_blank"
             class="btn btn-dark text-white-50"
             >Contacto</a
