Corrigiendo rutas de imágenes

--- a/Sobrenosotros.html
+++ b/Sobrenosotros.html
@@ -20,7 +20,7 @@
       >
         <div class="col">
           <img
-            src="/css/img/img/automotora_vip_logo.png"
+            src="css\img\img\automotora_vip_logo.png"
             alt=""
             id="logoheader"
           />
@@ -104,7 +104,7 @@
               <div class="card p-2 m-2 border">
                 <img
                   class="card-img-top"
-                  src="/css/img/img/about_us/cofounder_1.jpg"
+                  src="css\img\img\about_us\cofounder_1.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body">
@@ -165,7 +165,7 @@
               <div class="card p-2 m-2 border">
                 <img
                   class="card-img-top"
-                  src="/css/img/img/about_us/cofounder_2.jpg"
+                  src="css\img\img\about_us\cofounder_2.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body">
@@ -227,7 +227,7 @@
               <div class="card p-2 m-2 border">
                 <img
                   class="card-img-top"
-                  src="/css/img/img/about_us/cofounder_3.jpg"
+                  src="css\img\img\about_us\cofounder_3.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body">
