--- a/ventas.html
+++ b/ventas.html
@@ -20,7 +20,7 @@
       >
         <div class="col">
           <img
-            src="/css/img/img/automotora_vip_logo.png"
+            src="css\img\img\automotora_vip_logo.png"
             alt=""
             id="logoheader"
           />
@@ -558,20 +558,20 @@
               />
             </div>
             <div class="col">
-              <a href="/ventas.html" target="_blank" class="btn btn-dark"
+              <a href="ventas.html" target="_blank" class="btn btn-dark"
                 >Venta 0km</a
               >
               <br />
-              <a href="/ventas.html" target="_blank" class="btn btn-dark"
+              <a href="ventas.html" target="_blank" class="btn btn-dark"
                 >Venta Usados</a
               >
             </div>
             <div class="col">
-              <a href="/Sobrenosotros.html" target="_blank" class="btn btn-dark"
+              <a href="Sobrenosotros.html" target="_blank" class="btn btn-dark"
                 >Sobre nosotros</a
               >
               <br />
-              <a href="/Sobrenosotros.html" target="_blank" class="btn btn-dark"
+              <a href="Sobrenosotros.html" target="_blank" class="btn btn-dark"
                 >Contacto</a
               >
             </div>
