Corrijo estructura definitiva de carpetas y rutas

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
         id="headerdivborder"
       >
         <div class="col">
-          <img
-            src="css/img/img/automotora_vip_logo.png"
-            alt=""
-            id="logoheader"
-          />
+          <img src="img/automotora_vip_logo.png" alt="" id="logoheader" />
         </div>
         <div class="col">
           <a
@@ -92,35 +88,35 @@
           <div class="carousel-inner carrusel">
             <div class="carousel-item active">
               <img
-                src="css\img\img\cars_home\volvo_1.jpg"
+                src="img/cars_home/volvo_1.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="css\img\img\cars_home\audi_1.jpg"
+                src="img/cars_home/audi_1.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="css\img\img\cars_home\audi_2.jpg"
+                src="img/cars_home/audi_2.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="css\img\img\cars_home\bentley_1.jpg"
+                src="img/cars_home/bentley_1.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="css\img\img\cars_home\bmw_1.jpg"
+                src="img/cars_home/bmw_1.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
@@ -286,27 +282,23 @@
         <footer class="container p-5">
           <div class="row">
             <div class="col">
-              <img
-                src="css\img\img\automotora_vip_logo.png"
-                alt=""
-                id="imgfooter"
-              />
+              <img src="img/automotora_vip_logo.png" alt="" id="imgfooter" />
             </div>
             <div class="col">
-              <a href="/ventas.html" target="_blank" class="btn btn-dark"
+              <a href="ventas.html" target="_blank" class="btn btn-dark"
                 >Venta 0km</a
               >
               <br />
-              <a href="/ventas.html" target="_blank" class="btn btn-dark"
+              <a href="ventas.html" target="_blank" class="btn btn-dark"
                 >Venta Usados</a
               >
             </div>
             <div class="col">
-              <a href="/Sobrenosotros.html" target="_blank" class="btn btn-dark"
+              <a href="Sobrenosotros.html" target="_blank" class="btn btn-dark"
                 >Sobre nosotros</a
               >
               <br />
-              <a href="/Sobrenosotros.html" target="_blank" class="btn btn-dark"
+              <a href="Sobrenosotros.html" target="_blank" class="btn btn-dark"
                 >Contacto</a
               >
             </div>
