--- a/ventas.html
+++ b/ventas.html
@@ -10,7 +10,7 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css\css\style.css" />
+    <link rel="stylesheet" href="css/css/style.css" />
   </head>
   <body>
     <div>
@@ -19,11 +19,7 @@
         id="headerdivborder"
       >
         <div class="col">
-          <img
-            src="css/img/img/automotora_vip_logo.png"
-            alt=""
-            id="logoheader"
-          />
+          <img src="img/automotora_vip_logo.png" alt="" id="logoheader" />
         </div>
         <div class="col">
           <a
@@ -551,11 +547,7 @@
         <footer class="container p-5">
           <div class="row">
             <div class="col">
-              <img
-                src="css/img/img/automotora_vip_logo.png"
-                alt=""
-                id="imgfooter"
-              />
+              <img src="img/automotora_vip_logo.png" alt="" id="imgfooter" />
             </div>
             <div class="col">
               <a href="ventas.html" target="_blank" class="btn btn-dark"
