--- a/Sobrenosotros.html
+++ b/Sobrenosotros.html
@@ -19,11 +19,7 @@
         id="headerdivborder"
       >
         <div class="col">
-          <img
-            src="css/img/img/automotora_vip_logo.png"
-            alt=""
-            id="logoheader"
-          />
+          <img src="img/automotora_vip_logo.png" alt="" id="logoheader" />
         </div>
         <div class="col">
           <a
@@ -104,7 +100,7 @@
               <div class="card p-2 m-2 border">
                 <img
                   class="card-img-top"
-                  src="css/img/img/about_us/cofounder_1.jpg"
+                  src="img/about_us/cofounder_1.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body">
@@ -165,7 +161,7 @@
               <div class="card p-2 m-2 border">
                 <img
                   class="card-img-top"
-                  src="css\img\img\about_us\cofounder_2.jpg"
+                  src="img\about_us\cofounder_2.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body">
@@ -227,7 +223,7 @@
               <div class="card p-2 m-2 border">
                 <img
                   class="card-img-top"
-                  src="css/img/img/about_us/cofounder_3.jpg"
+                  src="img/about_us/cofounder_3.jpg"
                   alt="Card image cap"
                 />
                 <div class="card-body">
@@ -297,11 +293,7 @@
         <footer class="container p-5">
           <div class="row">
             <div class="col">
-              <img
-                src="css/img/img/automotora_vip_logo.png"
-                alt=""
-                id="imgfooter"
-              />
+              <img src="img/automotora_vip_logo.png" alt="" id="imgfooter" />
             </div>
             <div class="col">
               <a href="ventas.html" target="_blank" class="btn btn-dark"
