--- a/index.html
+++ b/index.html
@@ -88,35 +88,35 @@
           <div class="carousel-inner carrusel">
             <div class="carousel-item active">
               <img
-                src="/img/cars_home/volvo_1.jpg"
+                src="img/cars_home/volvo_1.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="/img/cars_home/audi_1.jpg"
+                src="img/cars_home/audi_1.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="/img/cars_home/audi_2.jpg"
+                src="img/cars_home/audi_2.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="/img/cars_home/bentley_1.jpg"
+                src="img/cars_home/bentley_1.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="/img/cars_home/bmw_1.jpg"
+                src="img/cars_home/bmw_1.jpg"
                 class="d-block w-100 carruselimagen"
                 alt="..."
               />
