--- a/index.html
+++ b/index.html
@@ -19,31 +19,22 @@
         id="headerdivborder"
       >
         <div class="col">
-          <img src="img/automotora_vip_logo.png" alt="" id="logoheader" />
+          <img
+            src="img/automotora_vip_logo.png"
+            alt=""
+            id="logoheader"
+            class="w-25"
+          />
         </div>
         <div class="col">
-          <a
-            href="ventas.html"
-            target="_blank"
-            class="btn btn-dark text-white-50"
-            >Venta 0km</a
-          >
-          <a
-            href="ventas.html"
-            target="_blank"
-            class="btn btn-dark text-white-50"
+          <a href="ventas.html" class="btn btn-dark text-white-50">Venta 0km</a>
+          <a href="ventas.html" class="btn btn-dark text-white-50"
             >Venta Usados</a
           >
-          <a
-            href="Sobrenosotros.html"
-            target="_blank"
-            class="btn btn-dark text-white-50"
+          <a href="Sobrenosotros.html" class="btn btn-dark text-white-50"
             >Sobre Nosotros</a
           >
-          <a
-            href="Sobrenosotros.html"
-            target="_blank"
-            class="btn btn-dark text-white-50"
+          <a href="Sobrenosotros.html" class="btn btn-dark text-white-50"
             >Contacto</a
           >
         </div>
@@ -185,7 +176,6 @@
                   </p>
                   <a
                     href="ventas.html"
-                    target="_blank"
                     rel="noopener noreferrer"
                     class="btn btn-outline-secondary mb-3"
                     >Ver autos</a
@@ -225,7 +215,6 @@
                   </p>
                   <a
                     href="ventas.html"
-                    target="_blank"
                     rel="noopener noreferrer"
                     class="btn btn-outline-secondary mb-3"
                     >Ver autos</a
@@ -265,7 +254,6 @@
                   </p>
                   <a
                     href="ventas.html"
-                    target="_blank"
                     rel="noopener noreferrer"
                     class="btn btn-outline-secondary mb-3"
                     >Ver Tramites</a
@@ -285,22 +273,16 @@
               <img src="img/automotora_vip_logo.png" alt="" id="imgfooter" />
             </div>
             <div class="col">
-              <a href="ventas.html" target="_blank" class="btn btn-dark"
-                >Venta 0km</a
-              >
+              <a href="ventas.html" class="btn btn-dark">Venta 0km</a>
               <br />
-              <a href="ventas.html" target="_blank" class="btn btn-dark"
-                >Venta Usados</a
-              >
+              <a href="ventas.html" class="btn btn-dark">Venta Usados</a>
             </div>
             <div class="col">
-              <a href="Sobrenosotros.html" target="_blank" class="btn btn-dark"
+              <a href="Sobrenosotros.html" class="btn btn-dark"
                 >Sobre nosotros</a
               >
               <br />
-              <a href="Sobrenosotros.html" target="_blank" class="btn btn-dark"
-                >Contacto</a
-              >
+              <a href="Sobrenosotros.html" class="btn btn-dark">Contacto</a>
             </div>
             <div class="col">
               <p id="pfooter">Copyright © AutoVIP 2023</p>
@@ -309,6 +291,7 @@
         </footer>
       </div>
     </div>
+    <script src="JS/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
