--- a/Sobrenosotros.html
+++ b/Sobrenosotros.html
@@ -14,45 +14,53 @@
   </head>
   <body>
     <div>
-      <header
-        class="row bg-dark p-4 d-flex flex-wrap position-relative"
-        id="headerdivborder"
-      >
-        <div class="col">
-          <img
-            src="img/automotora_vip_logo.png"
-            alt=""
-            id="logoheader"
-            class="w-25"
-          />
+      <header class="row bg-dark p-3" id="headerdivborder">
+        <div class="container-fluid">
+          <div
+            class="col-12 col-lg-3 mb-3 mb-lg-0 d-flex justify-content-center justify-content-lg-end"
+          >
+            <img
+              src="img/automotora_vip_logo.png"
+              alt="Logo"
+              id="logoheader"
+              class="w-50 w-lg-25"
+            />
+          </div>
         </div>
-        <div class="col">
-          <a href="ventas.html" class="btn btn-dark text-white-50">Venta 0km</a>
-          <a href="ventas.html" class="btn btn-dark text-white-50"
-            >Venta Usados</a
+        <div class="col-12 col-lg-9">
+          <div
+            class="d-flex flex-column flex-lg-row justify-content-center justify-content-lg-end top-lg-0 gap-2"
+            id="divbotonesheader"
           >
-          <a href="Sobrenosotros.html" class="btn btn-dark text-white-50"
-            >Sobre Nosotros</a
-          >
-          <a href="Sobrenosotros.html" class="btn btn-dark text-white-50"
-            >Contacto</a
-          >
+            <a href="ventas.html" class="btn btn-dark text-white-50"
+              >Venta 0km</a
+            >
+            <a href="ventas.html" class="btn btn-dark text-white-50"
+              >Venta Usados</a
+            >
+            <a href="Sobrenosotros.html" class="btn btn-dark text-white-50"
+              >Sobre Nosotros</a
+            >
+            <a href="Sobrenosotros.html" class="btn btn-dark text-white-50"
+              >Contacto</a
+            >
+          </div>
         </div>
       </header>
     </div>
     <!------------------Header END--------------------------->
     <div class="container">
       <div class="row">
-        <div class="col-12 container">
-          <h1 class="container">Sobre Nosotros</h1>
+        <div class="col-lg-12 container">
+          <h1 class="container mt-2">Sobre Nosotros</h1>
           <hr / class="container">
         </div>
-        <div class="col-12">
+        <div class="col-lg-12 col-12">
           <div class="row container">
-            <div class="col-6 border p-1">
+            <div class="col-lg-6 border p-1">
               <div class="border sobrenosotrosimg1 container"></div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6">
               <h3>Autovip</h3>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero
               nostrum repudiandae itaque minima illum animi voluptate adipisci
@@ -280,26 +288,42 @@
     <!------------------Main END--------------------------->
     <br />
     <div>
-      <div class="bg-dark" id="footertotal">
-        <footer class="container p-5">
-          <div class="row">
-            <div class="col">
-              <img src="img/automotora_vip_logo.png" alt="" id="imgfooter" />
+      <div class="bg-dark text-white mt-5" id="footertotal">
+        <footer class="container-fluid py-5">
+          <div class="row text-center text-md-start">
+            <div
+              class="col-12 col-md-3 mb-4 mb-md-0 d-flex justify-content-center"
+            >
+              <img
+                src="img/automotora_vip_logo.png"
+                alt="AutoVIP Logo"
+                id="imgfooter"
+                class="img-fluid"
+              />
             </div>
-            <div class="col">
-              <a href="ventas.html" class="btn btn-dark">Venta 0km</a>
-              <br />
-              <a href="ventas.html" class="btn btn-dark">Venta Usados</a>
+
+            <div class="col-6 col-md-3 mb-3">
+              <a href="ventas.html" class="btn text-white w-100 mb-2"
+                >Venta 0km</a
+              >
+              <a href="ventas.html" class="btn text-white w-100"
+                >Venta Usados</a
+              >
             </div>
-            <div class="col">
-              <a href="Sobrenosotros.html" class="btn btn-dark"
+
+            <div class="col-6 col-md-3 mb-3">
+              <a href="Sobrenosotros.html" class="btn text-white w-100 mb-2"
                 >Sobre nosotros</a
               >
-              <br />
-              <a href="Sobrenosotros.html" class="btn btn-dark">Contacto</a>
+              <a href="Sobrenosotros.html" class="btn text-white w-100"
+                >Contacto</a
+              >
             </div>
-            <div class="col">
-              <p id="pfooter">Copyright © AutoVIP 2023</p>
+
+            <div
+              class="col-12 col-md-3 d-flex align-items-center justify-content-center mt-3 mt-md-0"
+            >
+              <p class="mb-0 text-center">© AutoVIP 2023</p>
             </div>
           </div>
         </footer>
