--- a/ventas.html
+++ b/ventas.html
@@ -85,31 +85,22 @@
                     <div class="col-12 mb-3">
                       <label for="seleaño"><h4>Año</h4></label>
                       <br />
-                      <select name="seleaño" id="seleaño">
+                      <select name="seleaño" id="seleaño" class="seleccionAño">
                         <option value="" selected>Seleccionar...</option>
-                        <option value="">2013</option>
-                        <option value="">2014</option>
-                        <option value="">2015</option>
                       </select>
                     </div>
                     <div class="col-12 mb-3">
                       <label for="marca"><h4>Marca</h4></label>
                       <br />
-                      <select name="" id="marca" class="">
+                      <select name="" id="marca" class="seleccionMarca">
                         <option value="">Seleccionar...</option>
-                        <option value="">Audi</option>
-                        <option value="">BMW</option>
-                        <option value="">VOLVO</option>
                       </select>
                     </div>
                     <div class="col-12 mb-3">
                       <label for="modelo"><h4>Modelo</h4></label>
                       <br />
-                      <select name="" id="modelo">
+                      <select name="" id="autoModelo">
                         <option value="">Seleccionar...</option>
-                        <option value="">AudiQ5</option>
-                        <option value="">AudiQ7</option>
-                        <option value="">Audi A6 Quattro</option>
                       </select>
                     </div>
                     <div class="col-12 mb-3">
@@ -117,15 +108,16 @@
                       <br />
                       <select name="" id="estado">
                         <option value="">Seleccionar...</option>
-                        <option value="">0KM</option>
-                        <option value="">Usado</option>
-                        <option value="">+100.000km</option>
                       </select>
                     </div>
                     <div
                       class="col-12 col-lg-12 mt-3 d-flex flex-column justify-content-lg-center align-items-center"
                     >
-                      <button id="botonfiltrar" class="btn btn-warning w-75">
+                      <button
+                        id="botonfiltrar"
+                        class="btn btn-warning w-75"
+                        type="button"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           width="16"
@@ -140,7 +132,10 @@
                         </svg>
                         FILTRAR
                       </button>
-                      <button class="btn btn-outline-dark mt-4">
+                      <button
+                        class="btn btn-outline-dark mt-4"
+                        id="cambiarMoneda"
+                      >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           width="16"
@@ -161,252 +156,49 @@
             </div>
             <div class="col-12 col-lg-9">
               <main>
-                <div class="row ms-2 mb-3 mt-4 mt-lg-0">
-                  <div class="col-lg border border-2 m-0 p-0">
-                    <div class="border border-3 m-1 autonuevo p-0">
-                      <img src="img\cars_home\bentley_1.jpg" alt="" /
-                      class="w-100 h-100 position-relative">
-                    </div>
-                  </div>
-                  <div class="col-lg">
-                    <div class="row">
-                      <div class="col">
-                        <h2 id="autonombre"></h2>
-                      </div>
-                      <div class="col-8">
-                        <h7 id="PriceUSandUY">255555555</h7>
-                        <p id="estrellasRating">55555</p>
-                      </div>
-                    </div>
-                    <p id="infoVehiculo"></p>
-
-                    <!----------------------------------------------------------------------------->
-                    <div class="mt-3 d-flex d-lg-block">
-                      <button class="btn btn-success">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                          fill="currentColor"
-                          class="bi bi-cart"
-                          viewBox="0 0 16 16"
-                        >
-                          <path
-                            d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
-                          />
-                        </svg>
-                        Comprar
-                      </button>
-                      <button class="btn btn-outline-secondary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                          fill="currentColor"
-                          class="bi bi-info-circle"
-                          viewBox="0 0 16 16"
-                        >
-                          <path
-                            d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"
-                          />
-                          <path
-                            d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
-                          />
-                        </svg>
-                        Más informacion
-                      </button>
-                      <button class="btn btn-outline-secondary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                          fill="currentColor"
-                          class="bi bi-share"
-                          viewBox="0 0 16 16"
-                        >
-                          <path
-                            d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
-                          />
-                        </svg>
-                        Compartir
-                      </button>
-                    </div>
-                  </div>
-                </div>
-
-                <hr />
-                <div class="row ms-2 mb-3 mt-4 mt-lg-0">
-                  <div class="col-lg border border-2 m-0 p-0">
-                    <div class="border border-3 m-1 autonuevo p-0">
-                      <img src="img\cars_home\bentley_1.jpg" alt="" /
-                      class="w-100 h-100 position-relative">
-                    </div>
-                  </div>
-                  <div class="col-lg">
-                    <div class="row">
-                      <div class="col">
-                        <h2 id="autonombre">AUDI15</h2>
-                      </div>
-                      <div class="col-8">
-                        <h7 id="PriceUSandUY">255555555</h7>
-                        <p id="estrellasRating">55555</p>
-                      </div>
-                    </div>
-                    <p id="infoVehiculo"></p>
-
-                    <!----------------------------------------------------------------------------->
-                    <div class="mt-3 d-flex d-lg-block">
-                      <button class="btn btn-success">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                          fill="currentColor"
-                          class="bi bi-cart"
-                          viewBox="0 0 16 16"
-                        >
-                          <path
-                            d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
-                          />
-                        </svg>
-                        Comprar
-                      </button>
-                      <button class="btn btn-outline-secondary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                          fill="currentColor"
-                          class="bi bi-info-circle"
-                          viewBox="0 0 16 16"
-                        >
-                          <path
-                            d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"
-                          />
-                          <path
-                            d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
-                          />
-                        </svg>
-                        Más informacion
-                      </button>
-                      <button class="btn btn-outline-secondary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                          fill="currentColor"
-                          class="bi bi-share"
-                          viewBox="0 0 16 16"
-                        >
-                          <path
-                            d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
-                          />
-                        </svg>
-                        Compartir
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <!--------------------------CARD-------------------------------->
-                <hr />
-                <div class="row ms-2 mb-3 mt-4 mt-lg-0">
-                  <div class="col-lg border border-2 m-0 p-0">
-                    <div class="border border-3 m-1 autonuevo p-0">
-                      <img src="img\cars_home\bentley_1.jpg" alt="" /
-                      class="w-100 h-100 position-relative">
-                    </div>
-                  </div>
-                  <div class="col-lg">
-                    <div class="row">
-                      <div class="col">
-                        <h2 id="autonombre">AUDI15</h2>
-                      </div>
-                      <div class="col-8">
-                        <h7 id="PriceUSandUY">255555555</h7>
-                        <p id="estrellasRating">55555</p>
-                      </div>
-                    </div>
-                    <p id="infoVehiculo"></p>
-
-                    <!----------------------------------------------------------------------------->
-                    <div class="mt-3 d-flex d-lg-block">
-                      <button class="btn btn-success">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                          fill="currentColor"
-                          class="bi bi-cart"
-                          viewBox="0 0 16 16"
-                        >
-                          <path
-                            d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
-                          />
-                        </svg>
-                        Comprar
-                      </button>
-                      <button class="btn btn-outline-secondary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                          fill="currentColor"
-                          class="bi bi-info-circle"
-                          viewBox="0 0 16 16"
-                        >
-                          <path
-                            d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"
-                          />
-                          <path
-                            d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"
-                          />
-                        </svg>
-                        Más informacion
-                      </button>
-                      <button class="btn btn-outline-secondary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="16"
-                          height="16"
-                          fill="currentColor"
-                          class="bi bi-share"
-                          viewBox="0 0 16 16"
-                        >
-                          <path
-                            d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
-                          />
-                        </svg>
-                        Compartir
-                      </button>
-                    </div>
-                  </div>
-                </div>
+                <div class="row ms-lg-2 mb-3 mt-4 mt-lg-0 cartas"></div>
                 <hr />
               </main>
             </div>
           </div>
         </main>
       </div>
-      <div class="bg-dark" id="footertotal">
-        <footer class="container p-5">
-          <div class="row">
-            <div class="col">
-              <img src="img/automotora_vip_logo.png" alt="" id="imgfooter" />
+      <div class="bg-dark container-fluid w-100" id="footertotal">
+        <footer class="container-fluid py-5">
+          <div class="row text-center text-md-start">
+            <div
+              class="col-12 col-md-3 mb-4 mb-md-0 d-flex justify-content-center"
+            >
+              <img
+                src="img/automotora_vip_logo.png"
+                alt="AutoVIP Logo"
+                id="imgfooter"
+                class="img-fluid"
+              />
             </div>
-            <div class="col">
-              <a href="ventas.html" class="btn btn-dark">Venta 0km</a>
-              <br />
-              <a href="ventas.html" class="btn btn-dark">Venta Usados</a>
+
+            <div class="col-6 col-md-3 mb-3">
+              <a href="ventas.html" class="btn text-white w-100 mb-2"
+                >Venta 0km</a
+              >
+              <a href="ventas.html" class="btn text-white w-100"
+                >Venta Usados</a
+              >
             </div>
-            <div class="col">
-              <a href="Sobrenosotros.html" class="btn btn-dark"
+
+            <div class="col-6 col-md-3 mb-3">
+              <a href="Sobrenosotros.html" class="btn text-white w-100 mb-2"
                 >Sobre nosotros</a
               >
-              <br />
-              <a href="Sobrenosotros.html" class="btn btn-dark">Contacto</a>
+              <a href="Sobrenosotros.html" class="btn text-white w-100"
+                >Contacto</a
+              >
             </div>
-            <div class="col">
-              <p id="pfooter">Copyright © AutoVIP 2023</p>
+
+            <div
+              class="col-12 col-md-3 d-flex align-items-center justify-content-center mt-3 mt-md-0"
+            >
+              <p class="mb-0 text-center">© AutoVIP 2023</p>
             </div>
           </div>
         </footer>
